--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'joda-time:joda-time:2.3'
     implementation 'com.blankj:utilcode:1.20.1'
     implementation 'com.google.code.gson:gson:2.2.4'
+
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+
 }
